--- a/maven/deploy.settings
+++ b/maven/deploy.settings
@@ -3,6 +3,6 @@ gitUrl = https://github.com/DHosseiny/BazaarLintRules.git
 version = 0.0.1
 groupId = com.farsitel.bazaar
 licenses = ['Apache-2.0']
-id = BazaarLintRules
+id = bazaarLintRules
 name = BazaarLintRules
 description = Lint rules for Bazaar client app
